--- a/tasks/helm/release.yaml
+++ b/tasks/helm/release.yaml
@@ -51,6 +51,18 @@ spec:
             #!/usr/bin/env sh
             jx gitops variables
         - image: ghcr.io/jenkins-x/jx-changelog:0.3.0
+          name: promote-changelog-uat
+          resources: {}
+          script: |
+            #!/usr/bin/env sh    
+            source .jx/variables.sh
+            if [ -d "charts/$REPO_NAME" ]; then
+            jx gitops yset -p version -v "$VERSION" -f ./charts/$REPO_NAME/Chart.yaml
+            jx gitops yset -p appVersion -v "$VERSION" -f ./charts/$REPO_NAME/Chart.yaml
+            jx gitops yset -p 'image.repository' -v $DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME -f ./charts/$REPO_NAME/values.yaml
+            jx gitops yset -p 'image.tag' -v "$VERSION" -f ./charts/$REPO_NAME/values.yaml;
+            else echo no charts; fi              
+        - image: ghcr.io/jenkins-x/jx-changelog:0.3.0
           name: promote-changelog
           resources: {}
           script: |
