update jx-boot to 3.10.45 and updatebot to 0.4.1

--- a/tasks/maven/release.yaml
+++ b/tasks/maven/release.yaml
@@ -187,18 +187,7 @@ spec:
             #!/usr/bin/env sh
             source .jx/variables.sh
             jx gitops helm release
-        - env:
-          - name: GIT_TOKEN
-            valueFrom:
-              secretKeyRef:
-                key: password
-                name: tekton-git
-          - name: GIT_USER
-            valueFrom:
-              secretKeyRef:
-                key: username
-                name: tekton-git
-          image: ghcr.io/jenkins-x-plugins/jx-promote:0.6.2
+        - image: ghcr.io/jenkins-x-plugins/jx-promote:0.6.2
           name: promote-jx-promote
           resources: {}
           script: |
