--- a/tasks/cwp/release.yaml
+++ b/tasks/cwp/release.yaml
@@ -106,7 +106,7 @@ spec:
               --dockerfile=${DOCKERFILE_PATH:-Dockerfile} \
               --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION \
               --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:latest 
-        - image: ghcr.io/jenkins-x/jx-changelog:0.9.2
+        - image: ghcr.io/jenkins-x/jx-boot:3.10.45
           name: promote-changelog
           resources: {}
           script: |
@@ -125,7 +125,7 @@ spec:
             git tag -fa v$VERSION -m "Release version $VERSION"
             git push --force origin v$VERSION
 
-            jx changelog create --version v${VERSION}
+            jx changelog create --version v${VERSION} --output-markdown ../changelog.md
         - image: ghcr.io/jenkins-x/jx-boot:3.10.45
           name: promote-step6
           resources: {}
