--- a/tasks/flutter/release.yaml
+++ b/tasks/flutter/release.yaml
@@ -63,7 +63,7 @@ spec:
             flutter pub get
             flutter test
             flutter build apk
-        - image: ghcr.io/jenkins-x/jx-changelog:0.9.2
+        - image: ghcr.io/jenkins-x/jx-boot:3.10.45
           name: promote-changelog-uat
           resources: {}
           script: |
@@ -75,7 +75,7 @@ spec:
             jx gitops yset -p 'image.repository' -v $DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME -f ./charts/$REPO_NAME/values.yaml
             jx gitops yset -p 'image.tag' -v "$VERSION" -f ./charts/$REPO_NAME/values.yaml;
             else echo no charts; fi        
-        - image: ghcr.io/jenkins-x/jx-changelog:0.9.2
+        - image: ghcr.io/jenkins-x/jx-boot:3.10.45
           name: promote-changelog
           resources: {}
           script: |
@@ -89,7 +89,7 @@ spec:
             git tag -fa v$VERSION -m "Release version $VERSION"
             git push --force origin v$VERSION
 
-            jx changelog create --version v${VERSION}
+            jx changelog create --version v${VERSION} --output-markdown ../changelog.md
         - command:
           - jx-updatebot
           - pr
