--- a/tasks/lookml/release.yaml
+++ b/tasks/lookml/release.yaml
@@ -50,7 +50,7 @@ spec:
           script: |
             #!/usr/bin/env sh
             jx gitops variables
-        - image: ghcr.io/jenkins-x/jx-changelog:0.9.2
+        - image: ghcr.io/jenkins-x/jx-boot:3.10.45
           name: promote-changelog
           resources: {}
           script: |
@@ -66,7 +66,7 @@ spec:
             git tag -fa v$VERSION -m "Release version $VERSION"
             git push --force origin v$VERSION
 
-            jx changelog create --version v${VERSION}
+            jx changelog create --version v${VERSION} --output-markdown ../changelog.md
         - image: ghcr.io/jenkins-x/jx-boot:3.10.45
           name: promote-helm-release
           resources: {}
