--- a/tasks/maven-quarkus-native/release.yaml
+++ b/tasks/maven-quarkus-native/release.yaml
@@ -93,7 +93,7 @@ spec:
               --dockerfile=${DOCKERFILE_PATH:-Dockerfile} \
               --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION \
               --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:latest 
-        - image: ghcr.io/jenkins-x/jx-changelog:0.9.2
+        - image: ghcr.io/jenkins-x/jx-boot:3.10.45
           name: promote-changelog-uat
           resources: {}
           script: |
@@ -113,7 +113,7 @@ spec:
             git push --force origin v$VERSION
 
             jx changelog create --draft --version v${VERSION}
-        - image: ghcr.io/jenkins-x/jx-changelog:0.9.2
+        - image: ghcr.io/jenkins-x/jx-boot:3.10.45
           name: promote-changelog
           resources: {}
           script: |
@@ -127,7 +127,7 @@ spec:
             jx gitops yset -p 'image.tag' -v "$VERSION" -f ./charts/$REPO_NAME/values.yaml;
             else echo no charts; fi
 
-            jx changelog create --version v${VERSION}
+            jx changelog create --version v${VERSION} --output-markdown ../changelog.md
 
             git add * || true
             git commit -a -m "chore: release $VERSION" --allow-empty
