--- a/tasks/docker-okteto/release.yaml
+++ b/tasks/docker-okteto/release.yaml
@@ -12,6 +12,8 @@ spec:
         metadata: {}
         stepTemplate:
           env:
+          - name: OKTETO_DOMAIN
+            value: predev.jaraxa.systems         
           - name: HOME
             value: /tekton/home
           envFrom:
@@ -66,7 +68,7 @@ spec:
           resources: {}
           script: |
             #!/bin/bash
-            mc alias set myminio https://dkv-pet-minio-kompose.predev.jaraxa.systems minio minio123;
+            mc alias set myminio https://dkv-pet-minio-kompose.${OKTETO_DOMAIN} minio minio123;
             mc mb -p myminio/pet-files;
             mc policy set public myminio/pet-files;
             exit 0;
@@ -76,7 +78,7 @@ spec:
           script: |
             #!/bin/bash
             make $OKTETO_TARGET
-            echo "Visit https://ci-ui-kompose.predev.jaraxa.systems/ to get tests result report"
+            echo "Visit https://ci-ui-kompose.${OKTETO_DOMAIN}/ to get tests result report"
             echo "Login: admin@jaraxa.com / 12345678"
   podTemplate: {}
   serviceAccountName: tekton-bot
