--- a/tasks/docker-helm/release.yaml
+++ b/tasks/docker-helm/release.yaml
@@ -40,6 +40,11 @@ spec:
           script: |
             #!/usr/bin/env sh
             jx-release-version --tag --debug > VERSION
+        - image: ghcr.io/jenkins-x/jx-release-version:2.6.0
+          name: next-version-uat
+          script: |
+            #!/usr/bin/env sh
+            jx-release-version -debug -next-version=semantic:strip-prerelease -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT-$BUILD_ID > VERSION                        
         - image: ghcr.io/jenkins-x/jx-boot:3.10.45
           name: jx-variables
           resources:
