--- a/tasks/docker/release.yaml
+++ b/tasks/docker/release.yaml
@@ -84,7 +84,7 @@ spec:
             else echo no charts; fi
         - image: ghcr.io/jenkins-x/jx-boot:3.10.45
           name: promote-changelog
-          resources: {}build-helm-build
+          resources: {}
           script: |
             #!/usr/bin/env sh
             source .jx/variables.sh
