--- a/tasks/maven-quarkus-native/release.yaml
+++ b/tasks/maven-quarkus-native/release.yaml
@@ -133,6 +133,13 @@ spec:
             git commit -a -m "chore: release $VERSION" --allow-empty
             git tag -fa v$VERSION -m "Release version $VERSION"
             git push --force origin v$VERSION
+        - image: jnorwood/helm-docs:v1.4.0
+          name: chart-docs
+          resources: {}
+          script: |
+            #!/bin/ash
+            if [ -d "charts/$REPO_NAME" ]; then cd charts/$REPO_NAME
+            helm-docs; else echo no charts; fi             
         - image: ghcr.io/jenkins-x/jx-boot:3.10.45
           name: promote-helm-release
           resources: {}
