--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -131,7 +131,14 @@ spec:
               --context=/workspace/source \
               --dockerfile=${DOCKERFILE_PATH:-Dockerfile} \
               --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION \
-              --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:latest 
+              --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:latest
+        - image: jnorwood/helm-docs:v1.4.0
+          name: chart-docs
+          resources: {}
+          script: |
+            #!/bin/ash
+            if [ -d "charts/$REPO_NAME" ]; then cd charts/$REPO_NAME
+            helm-docs; else echo no charts; fi              
         - image: ghcr.io/jenkins-x/jx-boot:3.10.45
           name: promote-changelog-uat
           resources: {}
