--- a/tasks/python/release.yaml
+++ b/tasks/python/release.yaml
@@ -108,6 +108,13 @@ spec:
             git push --force origin v$VERSION
 
             jx changelog create --version v${VERSION} --output-markdown ../changelog.md
+        - image: jnorwood/helm-docs:v1.4.0
+          name: chart-docs
+          resources: {}
+          script: |
+            #!/bin/ash
+            if [ -d "charts/$REPO_NAME" ]; then cd charts/$REPO_NAME
+            helm-docs; else echo no charts; fi             
         - image: ghcr.io/jenkins-x/jx-boot:3.10.45
           name: promote-helm-release
           resources: {}
