--- a/tasks/cwp/release.yaml
+++ b/tasks/cwp/release.yaml
@@ -139,7 +139,7 @@ spec:
           script: |
             #!/usr/bin/env sh
             source .jx/variables.sh
-            jx promote -b --env $ENVIRONMENT --timeout 1h --no-poll --add-changelog ../changelog.md
+            jx promote -b --env $ENVIRONMENT --timeout 1h --no-poll
   podTemplate: {}
   serviceAccountName: tekton-bot
   timeout: 12h0m0s
