--- a/tasks/docker-okteto/release.yaml
+++ b/tasks/docker-okteto/release.yaml
@@ -68,7 +68,7 @@ spec:
           resources: {}
           script: |
             #!/bin/bash
-            mc alias set myminio http://$MINIO_SERVICE.$KOMPOSE_NAMESPACE.svc.cluster.local minio minio123;
+            mc alias set myminio http://$MINIO_SERVICE.$KOMPOSE_NAMESPACE.svc.cluster.local:9000 minio minio123;
             mc mb -p myminio/pet-files;
             mc policy set public myminio/pet-files;
             exit 0;
