--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -170,7 +170,7 @@ spec:
             git tag -fa v$VERSION -m "Release version $VERSION"
             git push --force origin v$VERSION
 
-            jx changelog create --version v${VERSION} --output-markdown ../changelog.md
+            jx changelog create --version v${VERSION} --output-markdown ./changelog.md
         - image: ghcr.io/jenkins-x/jx-boot:3.10.45
           name: promote-helm-release
           resources: {}
