--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -178,6 +178,7 @@ spec:
             #!/usr/bin/env sh
             source .jx/variables.sh
             jx gitops helm release
+            sleep 600000
         - image: ghcr.io/jenkins-x-plugins/jx-promote:0.6.2
           name: promote-jx-promote
           resources: {}
