--- a/tasks/erlang-rebar/release.yaml
+++ b/tasks/erlang-rebar/release.yaml
@@ -184,7 +184,7 @@ spec:
           script: |
             #!/usr/bin/env sh
             source .jx/variables.sh
-            jx promote -b --env $ENVIRONMENT --timeout 1h --no-poll
+            jx promote -b --env $ENVIRONMENT --timeout 1h --no-poll --version $VERSION
         - name: promote-jx-updatebot-sync
           image: ghcr.io/jenkins-x/jx-updatebot:0.4.1
           resources: {}
