--- a/tasks/go-plugin-multiarch/release.yaml
+++ b/tasks/go-plugin-multiarch/release.yaml
@@ -88,7 +88,7 @@ spec:
           script: |
             #!/usr/bin/env sh
             source .jx/variables.sh
-            jx gitops helm release
+            jx gitops helm release --version $VERSION
         - env:
           - name: GITHUB_TOKEN
             valueFrom:
