Added resources to npm install

--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -75,7 +75,10 @@ spec:
           resources:
             requests:
               cpu: 400m
-              memory: 512Mi
+              memory: 512Mi            
+            limits:
+              cpu: 2
+              memory: 3000Mi
           script: |
             #!/bin/bash
             source .jx/variables.sh
