--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -90,6 +90,7 @@ spec:
             #!/bin/bash
             source .jx/variables.sh
             CI=true DISPLAY=:99 npm test
+            npx --yes test-results-reporter publish
         - image: node:14-slim
           name: build-npm-version
           resources: {}
