--- a/tasks/helm/pullrequest.yaml
+++ b/tasks/helm/pullrequest.yaml
@@ -40,6 +40,13 @@ spec:
           script: |
             #!/bin/sh
             jx gitops helm build
+        - image: ghcr.io/jenkins-x-plugins/jx-preview:0.0.222
+          name: promote-jx-preview
+          resources: {}
+          script: |
+            #!/usr/bin/env sh
+            source .jx/variables.sh
+            jx preview create            
   podTemplate: {}
   serviceAccountName: tekton-bot
   timeout: 12h0m0s
