--- a/tasks/git-clone/git-clone.yaml
+++ b/tasks/git-clone/git-clone.yaml
@@ -30,11 +30,12 @@ spec:
       git config --global --add user.email ${GIT_AUTHOR_EMAIL:-jenkins-x@googlegroups.com}
       git config --global credential.helper store
       # lets clone the repo
-      git clone --recurse-submodules $REPO_URL $SUBDIR
+      git clone $REPO_URL $SUBDIR
       cd $SUBDIR
       git reset --hard $PULL_BASE_SHA
+      git submodule update --init
+
       echo "checked out revision: $PULL_BASE_REF@$PULL_BASE_SHA to dir: $SUBDIR"
-      
     workingDir: /workspace
   workspaces:
   - description: The git repo will be cloned onto the volume backing this workspace
