--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -53,6 +53,23 @@ spec:
             #!/usr/bin/env bash
             source .jx/variables.sh
             mvn --no-transfer-progress install
+        - image: maven:3.8.2-openjdk-17
+          name: mvn-karate-tests
+          resources: {}
+          script: |
+            #!/usr/bin/env sh
+            source .jx/variables.sh
+            echo "Starting Karate Testing"
+            mvn test compile
+            mvn test -Dkarate.env=$KARATE_ENV -Dtest=$KARATE_SUITE  
+        - image: node:18-slim
+          name: test-results-report
+          resources: {}
+          script: |
+            #!/bin/bash
+            source .jx/variables.sh
+            npm i test-results-reporter
+            npx test-results-reporter publish                     
         - image: ghcr.io/jenkins-x/jx-registry:0.1.10
           name: check-registry
           resources: {}
