added maven karate tests and slack reporter

--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -56,6 +56,7 @@ spec:
         - image: maven:3.8.2-openjdk-17
           name: mvn-karate-tests
           resources: {}
+          onError: continue
           script: |
             #!/usr/bin/env sh
             source .jx/variables.sh
