--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -56,12 +56,13 @@ spec:
         - image: maven:3.8.2-openjdk-17
           name: mvn-karate-tests
           resources: {}
+          onError: continue
           script: |
             #!/usr/bin/env sh
             source .jx/variables.sh
             echo "Starting Karate Testing"
             mvn test compile
-            mvn test -Dkarate.env=$KARATE_ENV -Dtest=$KARATE_SUITE || true
+            mvn test -Dkarate.env=$KARATE_ENV -Dtest=$KARATE_SUITE  
         - image: node:18-slim
           name: test-results-report
           resources: {}
