--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -63,7 +63,7 @@ spec:
             echo "Starting Karate Testing"
             mvn test compile
             mvn test -Dkarate.env=$KARATE_ENV -Dtest=$KARATE_SUITE
-        - image: ghcr.io/jenkins-x/jx-boot:3.10.87
+        - image: maven:3.8.2-openjdk-17
           name: test-results-report-git
           resources: {}
           script: |
@@ -80,6 +80,17 @@ spec:
             git add docs/
             git commit -am "Update karate tests gh-pages"
             git push -f
+          env:
+          - name: GIT_TOKEN
+            valueFrom:
+              secretKeyRef:
+                key: password
+                name: tekton-git
+          - name: GIT_USER
+            valueFrom:
+              secretKeyRef:
+                key: username
+                name: tekton-git            
         - image: node:18-slim
           name: test-results-report
           resources: {}
