added maven karate tests and slack reporter

--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -58,7 +58,7 @@ spec:
           resources: {}
           onError: continue
           script: |
-            #!/usr/bin/env sh
+            #!/bin/bash
             source .jx/variables.sh
             echo "Starting Karate Testing"
             mvn test compile
