Added files needed for Integration Pipeline

--- a/tasks/gradle/release.yaml
+++ b/tasks/gradle/release.yaml
@@ -61,13 +61,13 @@ spec:
           resources: {}
           script: |
             #!/bin/sh
-            gradle clean build   
+            gradle clean build $BUILD_OPTS
         - image: ghcr.io/jaraxasoftware/pet-component-android:builder-20231031
           name: android-gradle-publish
           resources: {}
           script: |
             #!/bin/sh
-            gradle publish               
+            gradle publish $BUILD_OPTS            
         - image: ghcr.io/jenkins-x/jx-registry:0.1.10
           name: check-registry
           resources: {}
