--- a/tasks/gradle/release.yaml
+++ b/tasks/gradle/release.yaml
@@ -48,7 +48,8 @@ spec:
           name: next-version-gradle-uat
           script: |
             #!/usr/bin/env sh
-            jx-release-version -debug -next-version=from-file:app/build.gradle -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-SNAPSHOT > VERSION            
+            jx-release-version -debug -next-version=from-file:app/build.gradle -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-SNAPSHOT > VERSION
+            sed -i -E "s/(version = '[0-9]+\.[0-9]+\.[0-9]')/\1 + '-SNAPSHOT'/" app/build.gradle            
         - image: ghcr.io/jenkins-x/jx-release-version:2.7.0
           name: next-version-gradle
           script: |
