pipeline to node18

--- a/tasks/javascript-node18/release.yaml
+++ b/tasks/javascript-node18/release.yaml
@@ -23,9 +23,7 @@ spec:
             name: ''
             resources:
               limits: {}
-            volumeMounts:
-              - mountPath: /tekton/home/npm
-                name: npmrc
+            volumeMounts: []
             workingDir: /workspace/source
           steps:
             - env:
