--- a/tasks/typescript/release.yaml
+++ b/tasks/typescript/release.yaml
@@ -94,7 +94,7 @@ spec:
             #!/bin/bash
             source .jx/variables.sh
             npm publish
-        - image: sonarsource/sonar-scanner-cli:4.8.0
+        - image: sonarsource/sonar-scanner-cli:latest
           name: sonar-code-analisys
           resources: {}
           script: |
