--- a/tasks/docker-helm/release.yaml
+++ b/tasks/docker-helm/release.yaml
@@ -131,7 +131,7 @@ spec:
           script: |
             #!/usr/bin/env sh
             source .jx/variables.sh
-            jx promote -b --env $ENVIRONMENT --timeout 1h --no-poll --version $VERSION --version $VERSION
+            jx promote -b --env $ENVIRONMENT --timeout 1h --no-poll --version $VERSION
         - name: promote-jx-updatebot-sync
           image: ghcr.io/jenkins-x/jx-updatebot:0.4.1
           resources: {}
