--- a/tasks/jira/release.yaml
+++ b/tasks/jira/release.yaml
@@ -20,7 +20,7 @@ spec:
     resources: {}
     script: |
       #!/bin/sh
-      git fetch --prune --unshallow --tags
+      git fetch --prune --tags
   - image: gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/git-init:v0.27.0
     name: collect-issues
     resources: {}
