--- a/tasks/jira/release.yaml
+++ b/tasks/jira/release.yaml
@@ -2,7 +2,7 @@ apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   creationTimestamp: null
-  name: git-clone
+  name: jira-release
 spec:
   stepTemplate:
     env:
