Fix for pre release tag

--- a/tasks/jira/release.yaml
+++ b/tasks/jira/release.yaml
@@ -39,16 +39,7 @@ spec:
     resources: {}
     script: |
       #!/bin/sh
-        curl -XPOST -H "Content-Type: application/json" -d '{
-          "data": {
-            "version": "$VERSION",
-            "projectname": "$JIRA_PROJECT"
-          },
-          "issues": [
-            $RELATED_JIRA_ISSUES
-          ]
-        }' \
-        $JIRA_WEBHOOK_URL
+        curl -XPOST -H "Content-Type: application/json" -d '{"data": {"version": "$VERSION","projectname": "$JIRA_PROJECT"}, "issues": ["$RELATED_JIRA_ISSUES"]}' $JIRA_WEBHOOK_URL
   workspaces:
   - description: The git repo will be cloned onto the volume backing this workspace
     mountPath: /workspace
