JXPET-4035 - Test for Jira integration

--- a/tasks/jira/release.yaml
+++ b/tasks/jira/release.yaml
@@ -14,6 +14,7 @@ spec:
         optional: true
     name: ""
     resources: {}
+    workingDir: /workspace/source    
   steps:
   - image: gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/git-init:v0.27.0
     name: git-history
@@ -42,5 +43,5 @@ spec:
       curl -s -XPOST -H "Content-Type: application/json" -d '{"data": {"version": "$VERSION","projectname": "$JIRA_PROJECT"}, "issues": [$RELATED_JIRA_ISSUES]}' $JIRA_WEBHOOK_URL
   workspaces:
   - description: The git repo will be cloned onto the volume backing this workspace
-    mountPath: /workspace
+    mountPath: /workspace/source
     name: output
